91-2024.07-iptables-contrack-kube-dns/dumps/iptables-on-fresh-cluster.txt
# Generated by iptables-save v1.8.9 on Fri Jul  5 09:02:35 2024
*raw
:PREROUTING ACCEPT [142186:673137358]
:OUTPUT ACCEPT [74422:17592541]
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -m tcp --dport 10248 -j NOTRACK
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -m tcp --sport 10248 -j NOTRACK
COMMIT
# Completed on Fri Jul  5 09:02:35 2024
# Generated by iptables-save v1.8.9 on Fri Jul  5 09:02:35 2024
*mangle
:PREROUTING ACCEPT [4323:1169313]
:INPUT ACCEPT [3772:627960]
:FORWARD ACCEPT [551:541353]
:OUTPUT ACCEPT [2341:577328]
:POSTROUTING ACCEPT [2892:1118681]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
-A OUTPUT -s 169.254.169.254/32 -p tcp -m tcp --sport 53 -j ACCEPT
-A OUTPUT -s 169.254.169.254/32 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -s 169.254.169.254/32 -j DROP
COMMIT
# Completed on Fri Jul  5 09:02:35 2024
# Generated by iptables-save v1.8.9 on Fri Jul  5 09:02:35 2024
*nat
:PREROUTING ACCEPT [18:1064]
:INPUT ACCEPT [2:104]
:OUTPUT ACCEPT [396:23888]
:POSTROUTING ACCEPT [412:24848]
:DOCKER - [0:0]
:IP-MASQ - [0:0]
:KUBE-EXT-XP4WJ6VSLGWALMW5 - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-45QY4P2V5GRV46ZJ - [0:0]
:KUBE-SEP-6DHX4LG6ERS6Z5WL - [0:0]
:KUBE-SEP-A3EX65UAR46F3P5K - [0:0]
:KUBE-SEP-HBEAIRK34RE5R3YL - [0:0]
:KUBE-SEP-HD43CATQ2MNWYNSG - [0:0]
:KUBE-SEP-JLAL77BV7XFYHKU2 - [0:0]
:KUBE-SEP-T45YWQ47IA3RFBWF - [0:0]
:KUBE-SEP-WNH6GDUJXUHENBBE - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-QMWWTXBG7KFJQKLO - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XBBXYMVKK37OV7LG - [0:0]
:KUBE-SVC-XP4WJ6VSLGWALMW5 - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -d 169.254.169.254/32 ! -i eth0 -p tcp -m tcp --dport 8080 -m comment --comment "metadata-concealment: bridge traffic to metadata server goes to metadata proxy" -j DNAT --to-destination 169.254.169.252:987
-A PREROUTING -d 169.254.169.254/32 ! -i eth0 -p tcp -m tcp --dport 80 -m comment --comment "metadata-concealment: bridge traffic to metadata server goes to metadata proxy" -j DNAT --to-destination 169.254.169.252:988
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m comment --comment "ip-masq: ensure nat POSTROUTING directs all non-LOCAL destination traffic to our custom IP-MASQ chain" -m addrtype ! --dst-type LOCAL -j IP-MASQ
-A IP-MASQ -d 169.254.0.0/16 -m comment --comment "ip-masq: local traffic is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 10.0.0.0/8 -m comment --comment "ip-masq: RFC 1918 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 172.16.0.0/12 -m comment --comment "ip-masq: RFC 1918 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 192.168.0.0/16 -m comment --comment "ip-masq: RFC 1918 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 240.0.0.0/4 -m comment --comment "ip-masq: RFC 5735 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 192.0.2.0/24 -m comment --comment "ip-masq: RFC 5737 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 198.51.100.0/24 -m comment --comment "ip-masq: RFC 5737 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 203.0.113.0/24 -m comment --comment "ip-masq: RFC 5737 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 100.64.0.0/10 -m comment --comment "ip-masq: RFC 6598 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 198.18.0.0/15 -m comment --comment "ip-masq: RFC 6815 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 192.0.0.0/24 -m comment --comment "ip-masq: RFC 6890 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -d 192.88.99.0/24 -m comment --comment "ip-masq: RFC 7526 reserved range is not subject to MASQUERADE" -j RETURN
-A IP-MASQ -m comment --comment "ip-masq: outbound traffic is subject to MASQUERADE (must be last in chain)" -j MASQUERADE
-A KUBE-EXT-XP4WJ6VSLGWALMW5 -m comment --comment "masquerade traffic for kube-system/default-http-backend:http external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-XP4WJ6VSLGWALMW5 -j KUBE-SVC-XP4WJ6VSLGWALMW5
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/default-http-backend:http" -m tcp --dport 30603 -j KUBE-EXT-XP4WJ6VSLGWALMW5
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-45QY4P2V5GRV46ZJ -s 10.24.1.3/32 -m comment --comment "kube-system/default-http-backend:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-45QY4P2V5GRV46ZJ -p tcp -m comment --comment "kube-system/default-http-backend:http" -m tcp -j DNAT --to-destination 10.24.1.3:8080
-A KUBE-SEP-6DHX4LG6ERS6Z5WL -s 10.24.2.5/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-6DHX4LG6ERS6Z5WL -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.24.2.5:53
-A KUBE-SEP-A3EX65UAR46F3P5K -s 10.24.1.7/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-A3EX65UAR46F3P5K -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.24.1.7:53
-A KUBE-SEP-HBEAIRK34RE5R3YL -s 10.24.0.4/32 -m comment --comment "kube-system/metrics-server" -j KUBE-MARK-MASQ
-A KUBE-SEP-HBEAIRK34RE5R3YL -p tcp -m comment --comment "kube-system/metrics-server" -m tcp -j DNAT --to-destination 10.24.0.4:10250
-A KUBE-SEP-HD43CATQ2MNWYNSG -s 10.24.2.3/32 -m comment --comment "gmp-system/gmp-operator:webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-HD43CATQ2MNWYNSG -p tcp -m comment --comment "gmp-system/gmp-operator:webhook" -m tcp -j DNAT --to-destination 10.24.2.3:10250
-A KUBE-SEP-JLAL77BV7XFYHKU2 -s 10.24.2.5/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-JLAL77BV7XFYHKU2 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.24.2.5:53
-A KUBE-SEP-T45YWQ47IA3RFBWF -s 10.0.0.4/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-T45YWQ47IA3RFBWF -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 10.0.0.4:443
-A KUBE-SEP-WNH6GDUJXUHENBBE -s 10.24.1.7/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-WNH6GDUJXUHENBBE -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.24.1.7:53
-A KUBE-SERVICES -d 10.87.19.170/32 -p tcp -m comment --comment "kube-system/default-http-backend:http cluster IP" -m tcp --dport 80 -j KUBE-SVC-XP4WJ6VSLGWALMW5
-A KUBE-SERVICES -d 10.87.16.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.87.16.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.87.29.245/32 -p tcp -m comment --comment "kube-system/metrics-server cluster IP" -m tcp --dport 443 -j KUBE-SVC-QMWWTXBG7KFJQKLO
-A KUBE-SERVICES -d 10.87.16.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.87.20.53/32 -p tcp -m comment --comment "gmp-system/gmp-operator:webhook cluster IP" -m tcp --dport 443 -j KUBE-SVC-XBBXYMVKK37OV7LG
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.24.0.0/24 -d 10.87.16.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.24.1.7:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-WNH6GDUJXUHENBBE
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.24.2.5:53" -j KUBE-SEP-6DHX4LG6ERS6Z5WL
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.24.0.0/24 -d 10.87.16.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 10.0.0.4:443" -j KUBE-SEP-T45YWQ47IA3RFBWF
-A KUBE-SVC-QMWWTXBG7KFJQKLO ! -s 10.24.0.0/24 -d 10.87.29.245/32 -p tcp -m comment --comment "kube-system/metrics-server cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-QMWWTXBG7KFJQKLO -m comment --comment "kube-system/metrics-server -> 10.24.0.4:10250" -j KUBE-SEP-HBEAIRK34RE5R3YL
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.24.0.0/24 -d 10.87.16.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.24.1.7:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-A3EX65UAR46F3P5K
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.24.2.5:53" -j KUBE-SEP-JLAL77BV7XFYHKU2
-A KUBE-SVC-XBBXYMVKK37OV7LG ! -s 10.24.0.0/24 -d 10.87.20.53/32 -p tcp -m comment --comment "gmp-system/gmp-operator:webhook cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-XBBXYMVKK37OV7LG -m comment --comment "gmp-system/gmp-operator:webhook -> 10.24.2.3:10250" -j KUBE-SEP-HD43CATQ2MNWYNSG
-A KUBE-SVC-XP4WJ6VSLGWALMW5 ! -s 10.24.0.0/24 -d 10.87.19.170/32 -p tcp -m comment --comment "kube-system/default-http-backend:http cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-XP4WJ6VSLGWALMW5 -m comment --comment "kube-system/default-http-backend:http -> 10.24.1.3:8080" -j KUBE-SEP-45QY4P2V5GRV46ZJ
COMMIT
# Completed on Fri Jul  5 09:02:35 2024
# Generated by iptables-save v1.8.9 on Fri Jul  5 09:02:35 2024
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -j ACCEPT
-A INPUT -p udp -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p sctp -j ACCEPT
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -p tcp -j ACCEPT
-A FORWARD -p udp -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -p sctp -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.87.20.53/32 -p tcp -m comment --comment "gmp-system/gmp-operator:legacy has no endpoints" -m tcp --dport 8443 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri Jul  5 09:02:35 2024
